--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -17,6 +17,13 @@
         android:orientation="horizontal" />
 
       <Button
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:id="@id/cheat_button"
+          android:layout_gravity="bottom|center"
+          android:text="@string/cheat_button"/>
+
+      <Button
           android:id="@+id/true_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
